Closed
Bug 1694000
Opened 5 years ago
Closed 5 years ago
Crash in [@ -[GeckoNSApplication reportException:]] for "NSInternalInconsistencyException: 635536602.413357 Missing Touches. This is a bug in IOHIDFamily"
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
87 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox86 | --- | unaffected |
firefox87 | --- | fixed |
People
(Reporter: mstange, Assigned: mstange)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
Crash report: https://crash-stats.mozilla.org/report/index/654f530c-1065-4f98-836c-141460210220
MOZ_CRASH Reason: MOZ_CRASH(Uncaught Objective C exception from -[GeckoNSApplication reportException:])
Obj-C Exception data:
NSInternalInconsistencyException: 635536602.413357 Missing Touches. This is a bug in IOHIDFamily
Thrown at stack:
__exceptionPreprocess (in CoreFoundation) + 0xea
objc_exception_throw (in libobjc.A.dylib) + 0x30
+[NSException raise:format:arguments:] (in CoreFoundation) + 0x58
-[NSAssertionHandler handleFailureInFunction:file:lineNumber:description:] (in Foundation) + 0xa6
-[NSEvent _initDigitizerTouchesFromIOHidEvent:window:contextID:] (in AppKit) + 0x5b2
-[NSEvent _initWithCGEvent:eventRef:] (in AppKit) + 0xe91
-[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] (in AppKit) + 0x663
-[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] (in XUL) + 0xb1
-[NSApplication run] (in AppKit) + 0x292
nsAppShell::Run() (in XUL) + 0xab
nsAppStartup::Run() (in XUL) + 0x3c
XREMain::XRE_mainRun() (in XUL) + 0x849
XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) (in XUL) + 0x3df
XRE_main(int, char**, mozilla::BootstrapConfig const&) (in XUL) + 0x85
main (in firefox) + 0x24e
start (in libdyld.dylib) + 0x1
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Comment 2•5 years ago
|
||
This reduces risk while we gather an inventory of exceptions that are outside
our control and which we want to ignore.
We still log all (non-ignored) exceptions in Beta/Release builds, we just don't
crash for them. So if something else later causes a crash, we will still see the
information in crash reports.
Depends on D105871
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/7a07827d12d7
Ignore "Missing Touches." exception when it bubbles up to the event loop. r=spohl
https://hg.mozilla.org/integration/autoland/rev/b24f6cf3c3da
Restrict the MOZ_CRASH for uncaught exceptions in the event loop to the Nightly channel. r=spohl
Comment 4•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/7a07827d12d7
https://hg.mozilla.org/mozilla-central/rev/b24f6cf3c3da
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox87:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
Updated•4 years ago
|
status-firefox86:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•