Bug 1694000 - Ignore "Missing Touches." exception when it bubbles up to the event loop. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D105871